<resources>
    <string name="str_open_position">开仓</string>
    <string name="str_close_position">平仓</string>
    <string name="str_buy_up">开多</string>
    <string name="str_buy_down">开空</string>
    <string name="str_sell_down">平空</string>
    <string name="str_sell_up">平多</string>
    <string name="str_price">价格</string>
    <string name="sl_str_market_order">市价单</string>
    <string name="sl_str_buy1_price">买一价</string>
    <string name="sl_str_sell1_price">卖一价</string>
    <string name="str_vol_unit">张</string>
    <string name="str_amount">数量</string>
    <string name="str_entrust_value">委托价值</string>
    <string name="str_cost">成本</string>
    <string name="str_available">可用</string>
    <string name="str_fair_price">合理价格</string>
    <string name="str_fair_price_intro">合理价格等于标的指数价格加上随时间递减的资金费用基差，主要为了避免高杠杆发生的不必要平仓。合理价格影响强平，即当合理价格达到爆仓价格时，系统将执行强制平仓操作。</string>
    <string name="str_limit_entrust">普通委托</string>
    <string name="str_plan_entrust">条件委托</string>
    <string name="str_plan_entrust_label">条件单</string>
    <string name="str_limit_advanced_entrust">高级限价</string>
    <string name="str_funds_rate">资金费率</string>
    <string name="sl_str_full_position">全仓</string>
    <string name="sl_str_gradually_position">逐仓</string>
    <string name="str_funds_transfer">资金划转</string>
    <string name="str_contract_info">合约信息</string>
    <string name="str_position_info">仓位信息</string>
    <string name="str_contract_setting">合约设置</string>
    <string name="str_quick_mode">闪电模式</string>
    <string name="str_professional_mode_hints">专业模式为专业用户设计涵盖全部功能，包括仓位模式的选择，保 证金调整，仓位的止损止盈设置，计划委托等功能，且在行情页面 中，展示更多的相关信息。</string>
    <string name="str_professional_mode">专业模式</string>
    <string name="str_quick_mode_hints">闪电模式为日内高频交易客户设计，可帮助客户进行快速交易，因 市价单在极端行情下会有损失的可能，因此只可使用逐仓模式进行 交易，</string>
    <string name="str_switch_contract">合约切换</string>
    <string name="str_no_data">无数据</string>
    <string name="str_index_price">指数价格</string>
    <string name="str_index_price_intro">指数价格是标的资产的多个现货市场加权价格，用于计算当前市场合约的合理价格。</string>
    <string name="str_funds_rate_intro">资金费率为正数，多头仓位向空头仓位支付 仓位价值乘资金费率 的资金费。\\n资金费率为负数，多头仓位向空头仓位收取 仓位价值乘资金费率 的资金费。\\n资金费用 = 仓位价值 * 资金费率</string>
    <string name="str_display_unit">合约展示单位</string>
    <string name="str_pnl_calculator">未实现盈亏计算</string>
    <string name="str_book_confirm">下单二次确认</string>
    <string name="str_strategy_effective_time">条件单有效时间</string>
    <string name="str_in_24_hours">24小时</string>
    <string name="str_coin_unit">币</string>
    <string name="str_latest_price">最新价格</string>
    <string name="str_in_7_days">7天</string>
    <string name="str_contract_market">合约行情</string>
    <string name="str_label_name">名称/成交量</string>
    <string name="str_last_price_simple">最新价</string>
    <string name="str_24_rate">24h涨跌(%)</string>
    <string name="str_deal_vol">成交量：</string>
    <string name="str_day_rate_rank">日盈利排行榜</string>
    <string name="str_nick_name">昵称</string>
    <string name="str_profit_value">收益额</string>
    <string name="contract_assets_account_equity">权益</string>
    <string name="str_asset_freeze">冻结</string>
    <string name="str_assets_available">可用</string>
    <string name="str_all">全部</string>
    <string name="str_transfer_in">转入</string>
    <string name="str_transfer_out">转出</string>
    <string name="str_air_drop">空投</string>
    <string name="str_fee">手续费</string>
    <string name="str_decrease_margin">减少保证金</string>
    <string name="str_add_margin">增加保证金</string>
    <string name="str_fee_share">手续费分成</string>
    <string name="str_login">登录</string>
    <string name="str_max_open_vol">最大可开</string>
    <string name="str_max_close_vol">最大可平</string>
    <string name="str_hold_position">持仓</string>
    <string name="str_fair_price_simple">合理价</string>
    <string name="str_index_price_simple">指数价</string>
    <string name="str_price_too_low">价格太低</string>
    <string name="str_volume_too_low">数量太低</string>
    <string name="str_book_order_tips">请保证下单量小于等于%s张！</string>
    <string name="str_contract_no_asset_tips">您的合约账户暂无资产，请划转后交易</string>
    <string name="str_stop_profit_loss">止盈止损</string>
    <string name="str_input_trigger_price_hint">输入触发价格</string>
    <string name="str_leverage">杠杆</string>
    <string name="str_entrust_cost">委托成本</string>
    <string name="str_deal_poisition">成交后仓位</string>
    <string name="str_market_price">市价</string>
    <string name="str_order_success">下单成功</string>
    <string name="str_cost_price">持仓均价</string>
    <string name="str_liq_price">预估强平价</string>
    <string name="str_unrealised_pnl">未实现盈亏</string>
    <string name="str_floating_gains">回报率</string>
    <string name="str_tab_post_only">只做maker</string>
    <string name="str_tab_fok">FOK</string>
    <string name="str_tab_ioc">IOC</string>
    <string name="str_item_post_only">只做maker(Post only)</string>
    <string name="str_item_fok">全部成交或立即取消（FOK）</string>
    <string name="str_item_ioc">立即成交并取消剩余（IOC）</string>
    <string name="str_stop_win_loss_tips">当开启止损/止盈需要设定触发价格，当最新价格到达触发价格，以市价单平仓100%仓位</string>
    <string name="str_entrust_volume">委托数量</string>
    <string name="str_entrust_price">委托价格</string>
    <string name="str_more">更多</string>
    <string name="str_setting">设置</string>
    <string name="str_entrust_info">委托信息</string>
    <string name="str_estimated_deal_price">预估成交价</string>
    <string name="str_input_order_vol_tips">请输入下单本金</string>
    <string name="str_lever_label">杠杆倍数</string>
    <string name="str_available_vol">可用余额</string>
    <string name="str_quick_trade">闪电开仓</string>
    <string name="str_estimated_deal_price_tips">预估成交价使用对手盘第三档实时变动价格，帮助您确定立刻成交可能的交易价格。闪电模式会以该价格核算提交订单所需信息（价格/张数），并提交高级限价单立即成交或取消，用来保护您的订单成交价格不被偏离，在大部分情况实际成交价小于等于该价格。</string>
    <string name="str_quick_close_position">闪电平仓</string>
    <string name="sl_str_hold_buy_open">多头</string>
    <string name="sl_str_hold_sell_open">空头</string>
    <string name="str_adjust_lever">调整杠杆</string>
    <string name="sl_select_lever_warn">*当前杠杆倍数较高，请注意风险</string>
    <string name="str_full_lever_warn">全仓模式下，若发生强平将损失该币种所有的可用余额，请注意仓位风险控制。</string>
    <string name="str_current_entrust">当前委托</string>
    <string name="str_history_entrust">历史委托</string>
    <string name="str_current_position">当前仓位</string>
    <string name="str_history_position">历史仓位</string>
    <string name="str_close_vol_label">可平量</string>
    <string name="str_position_value">仓位价值</string>
    <string name="sl_str_margins">保证金</string>
    <string name="str_gains_balance">已实现盈亏</string>
    <string name="str_mode_switch">模式切换</string>
    <string name="str_trigger_price">触发价格</string>
    <string name="str_execution_price">执行价格</string>
    <string name="str_market_price_label">市场价格</string>
    <string name="str_execution_volume">执行数量</string>
    <string name="str_deadline_time">到期时间</string>
    <string name="str_cancel_order_tips">您确认取消这条订单么？</string>
    <string name="str_some_orders_cancel_failed">部分订单取消失败，请手动取消</string>
    <string name="str_cancel_success">取消成功</string>
    <string name="str_trigger_time">触发时间</string>
    <string name="str_order_complete">订单完成</string>
    <string name="str_user_canceled">订单取消</string>
    <string name="str_order_timeout">订单超时</string>
    <string name="str_trigger_failed">触发失败</string>
    <string name="str_insufficient">余额不足</string>
    <string name="str_trigger_failed_info">在%1$s,%2$s的%3$s到达%4$s时，自动触发该计划委托，触发失败，失败原因：%5$s。</string>
    <string name="str_trigger_failed_reason4">订单将触发强平</string>
    <string name="str_trigger_failed_reason5">订单参数无效，触发失败</string>
    <string name="str_trigger_failed_reason6">不存在可平仓位</string>
    <string name="str_trigger_failed_reason7">不存在可平仓位</string>
    <string name="str_trigger_failed_reason8">仓位可平量不够</string>
    <string name="str_trigger_failed_reason9">不存在可平仓位</string>
    <string name="str_trigger_failed_reason10">该合约暂停交易，计划委托触发失败</string>
    <string name="str_trigger_failed_reason11">不能与自己的反向订单成交</string>
    <string name="str_trigger_failed_reason12">该合约已下线，计划委托触发失败</string>
    <string name="str_trigger_failed_reason13">未知错误</string>
    <string name="str_direction">方向</string>
    <string name="str_status">状态</string>
    <string name="str_deal_done">已成交</string>
    <string name="str_has_cancel">已撤销</string>
    <string name="str_part_deal">部分成交</string>
    <string name="str_order_deal_detail">成交明细</string>
    <string name="str_deal_cost_px">成交均价</string>
    <string name="str_force_close_details">强平明细</string>
    <string name="str_reduce_position_details">减仓明细</string>
    <string name="str_blowing_up_datail">爆仓明细</string>
    <string name="str_calculate">计算器</string>
    <string name="str_pl_calculator">盈亏计算</string>
    <string name="str_close_position_price">平仓价格</string>
    <string name="str_cancel_reason">取消原因</string>
    <string name="str_entrust_failed_reason2">破产委托超时未成交，被系统撤销</string>
    <string name="str_entrust_failed_reason3">用户资产不足，部分委托被系统撤销</string>
    <string name="str_entrust_failed_reason4">冻结保证金不足，部分委托被系统撤销</string>
    <string name="str_entrust_failed_reason5">部分委托被系统撤销</string>
    <string name="str_entrust_failed_reason6">经系统试算该委托成交会引起仓位强平，委托被系统撤销</string>
    <string name="str_entrust_failed_reason7">用户仓位发生自动减仓，部分委托被系统撤销</string>
    <string name="str_entrust_failed_reason8">分摊对手方穿仓损失，部分委托被系统撤销</string>
    <string name="str_entrust_failed_reason9">可平仓位数量不足，部分委托被系统撤销</string>
    <string name="str_entrust_failed_reason10">委托类型非法，该委托被系统撤销</string>
    <string name="str_entrust_failed_reason11">不能与自己的反向订单成交，部分委托被系统撤销</string>
    <string name="str_entrust_failed_reason12">FOK订单，无法全部成交时被系统撤销</string>
    <string name="str_entrust_failed_reason13">IOC订单，无法立即成交时部分委托被系统撤销</string>
    <string name="str_entrust_failed_reason14">市价单成交价格偏离过大，部分委托被系统撤销</string>
    <string name="str_entrust_failed_reason15">被动委托，撮合时为taker部分被系统撤销</string>
    <string name="str_entrust_failed_reason16">仓位发生强平，未成交委托被系统撤销 </string>
    <string name="str_entrust_failed_reason17">play订单，部分委托被系统撤销</string>
    <string name="str_entrust_failed_reason18">仓位被强制交割，部分委托被系统撤销</string>
    <string name="str_deal_time">成交时间</string>
    <string name="str_deal_money">成交金额</string>
    <string name="str_deal_price">成交价格</string>
    <string name="str_rose">上涨至</string>
    <string name="str_fall">下跌至</string>
    <string name="str_reduce_position_tips">在%1$s，标记价格在%2$s，由于系统保险基金不足，根据盈利排名PnL将你与对手盘在价格%3$s自动减仓</string>
    <string name="str_wiped_out_tips0">在%1$s，%2$s合约的标记价格%3$s时，您的仓位%4$s-保证金率小于%5$s的维持保证金率，因此触发强平</string>
    <string name="str_wiped_out_tips1">在%1$s，%2$s合约的标记价格%3$s时，您的仓位%4$s-保证金率小于%5$s的维持保证金率，因此触发爆仓</string>
    <string name="str_wiped_out_tips2">根据保险基金和维持保证金余量，按照价格为%1$s委托入市场，并按照该委托价格结算仓位的收益，但仓位平仓的实际成交价格可能不等于委托价格</string>
    <string name="str_stop_win_label">止盈</string>
    <string name="str_stop_loss_label">止损</string>
    <string name="str_stop_win_estimate_profit">预计盈利 %s 回报率%s</string>
    <string name="str_stop_loss_estimate_profit">预计损失 %s 回报率%s</string>
    <string name="str_close_vol">平仓数量</string>
    <string name="str_market_px_flat">市价全平</string>
    <string name="str_limit_px_close">限价平仓</string>
    <string name="str_input_ex_price_hint">输入执行价格</string>
    <string name="str_open_contract_label">开通合约</string>
    <string name="str_open_contract_tips">"一、当您在合约市场进行交易时，若因市场走势对您不利产生亏损，导致您的持仓保证金不足。本交易所合约将会按照系统约定对您的持仓进行强平委托并披露强平明细，请您留意。
        \n 二、请您务必认真阅读并遵守本交易所的业务规则。了解合约机制和运行原理，了解市场的各种风险，合理安排资金进行交易。
        \n三、在某些极端的市场行情下，您可能会难以或无法将持有的未平仓合约平仓。例如，当你的盈利在整个合约市场中有效杠杆PnL中排位第一，且保险基金不足以垫付亏损方的穿仓损失情况下。
        \n四、由于当地法律、法规、政策的变化、合约交易所交易规则的修改、紧急措施的出台等原因，本交易所会提前披露声明，您持有的未平仓合约可能无法继续持有，但持仓保证金和盈利的结余平台仍会兑现！
        \n五、由于非本交易所所能控制的原因，例如：地震、水灾、火灾等不可抗力因素或者计算机系统、通讯系统故障等，可能造成您的指令无法成交或者无法全部成交，您可能会承担由此导致的损失。
        \n六、“套期保值”交易同投机交易一样，同样面临价格波动引起的风险。请您提前了解相关机制。  七、若您账号借给非本人操作，将可能会影响到您的合约保证金安全性。请务必保证个人账户安全。 "</string>
    <string name="str_open_contract_confirm">立即开通</string>
    <string name="str_open_contract_risk_tips">我已知晓风险，继续开通合约账户</string>
</resources>