<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/contract_market_bg"
    android:paddingTop="10dp"
    android:paddingBottom="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:textSize="@dimen/font_size_xl"
            android:textColor="@color/text_color"
            android:text="@string/str_day_rate_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <RelativeLayout
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">


            <TextView
                android:layout_centerVertical="true"
                android:textSize="@dimen/font_size_m"
                android:textColor="@color/hint_color"
                android:text="@string/str_nick_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



            <TextView
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:textSize="@dimen/font_size_m"
                android:textColor="@color/hint_color"
                android:text="@string/str_profit_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/market_layout"
            tools:itemCount="4"
            tools:listitem="@layout/view_contact_rank_item_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</FrameLayout>